--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,6 +12,6 @@
 </div>
 
 <div class="body-resume center">
-    <%= link_to "Nuova Transazione", "#" , class:"btn btn-outline-primary my-2 my-sm-0" %>
+    <%= link_to "Nuova Transazione", new_transaction_path , class:"btn btn-outline-primary my-2 my-sm-0" %>
     <%= link_to "Nuovo Utente", new_user_path , class:"btn btn-outline-success my-2 my-sm-0" %>
 </div>
