--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -23,7 +23,7 @@ $lite-grey : #EAEAEA;
 }
 
 .body-resume{
-    width: 450px;
+    width: 70%;
     margin: auto;
     padding: 10px;
     border: 3px solid;
