--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -5,6 +5,7 @@ $lite-grey : #EAEAEA;
     color: white;
     font-weight: bold;
     text-align: center;
+    font-size: 20px;
     text-decoration: none;
     width: 100%;
     margin: 5px;
@@ -42,6 +43,17 @@ $lite-grey : #EAEAEA;
     font-weight: bold;
     text-align: center;
     padding-bottom: 10px;
+}
+
+.li-element{
+    color: black;
+    font-size: 20px;
+    padding-bottom: 5px;
+}
+
+.button-text{
+    font-size: 20px;
+    font-weight: bold;
 }
 
 .center{
