--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,3 +1,4 @@
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <nav class="navbar navbar-dark bg-dark">
   <a class="title" href="/">PRESTITAPP</a>
 </nav>
