--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,4 +14,6 @@
 <div class="body-resume center">
     <%= link_to "Nuova Transazione", new_transaction_path , class:"button-text btn-block btn btn-outline-primary my-2 my-sm-0" %>
     <%= link_to "Nuovo Utente", new_user_path , class:"button-text btn-block btn btn-outline-success my-2 my-sm-0" %>
+    <%= link_to "Lista Transazioni", transactions_path , class:"button-text btn-block btn btn-outline-danger my-2 my-sm-0" %>
+
 </div>
