--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -6,11 +6,11 @@
     <div class="my-2 my-lg-0">
     <%= form_for(@transaction) do |f| %>
       <%= f.text_field :description, class: "form-control mr-sm-2", placeholder:"Descrizione" %>
-      <%= f.text_field :amount, class: "form-control mr-sm-2", placeholder:"Ammontare" %>
+      <%= f.number_field :amount, class: "form-control mr-sm-2", placeholder:"Ammontare" %>
        <% User.all.each do |user| %>
         <%=user.name %> <%= f.radio_button :user_id, user.id %><br>
       <% end %>
-      <%= f.submit "Crea", class: "btn btn-outline-success my-2 my-sm-0", data: { confirm: "Confermi?" } %>
+      <%= f.submit "Crea", class: "button-text btn-block btn btn-outline-primary my-2 my-sm-0", data: { confirm: "Confermi?" } %>
       
     <% end %>
   </div>
