--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,13 @@
-<ul>
-    <% User.all.each do |user| %>
-        <li>
-            <%= user.name %>: <%= user.total %> €
-        </li>
-    <% end %>
+<h1>All users</h1>
+
+<%= will_paginate %>
+
+<ul class="users">
+  <% @users.each do |user| %>
+    <li>
+      <%= link_to user.name, user %>
+    </li>
+  <% end %>
 </ul>
+
+<%= will_paginate %>
