--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,7 +6,7 @@
     <div class="my-2 my-lg-0">
     <%= form_for(@user) do |f| %>
       <%= f.text_field :name, class: "form-control mr-sm-2", placeholder:"Nome" %>
-      <%= f.submit "Crea", class: "btn btn-outline-success my-2 my-sm-0", data: { confirm: "Confermi?" } %>
+      <%= f.submit "Crea", class: "button-text btn-block btn btn-outline-success my-2 my-sm-0", data: { confirm: "Confermi?" } %>
     <% end %>
   </div>
 </div>
