--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -1,4 +1,4 @@
-<div class="body-resume grey-bg center">
+<div class="body-resume grey-bg">
     <div class="label">
         Crea nuova transazione
     </div>
@@ -7,9 +7,12 @@
     <%= form_for(@transaction) do |f| %>
       <%= f.text_field :description, class: "form-control mr-sm-2", placeholder:"Descrizione" %>
       <%= f.text_field :amount, class: "form-control mr-sm-2", placeholder:"Ammontare" %>
-       <% User.all.each do |user| %>
-        <%=user.name %> <%= f.radio_button :user_id, user.id %><br>
-      <% end %>
+      <br>
+      <% User.all.each do |user| %>
+        <a class="li-element">
+          <%=user.name %> <%= f.radio_button :user_id, user.id %>
+        </a><br>
+      <% end %><br>
       <%= f.submit "Crea", class: "button-text btn-block btn btn-outline-primary my-2 my-sm-0", data: { confirm: "Confermi?" } %>
       
     <% end %>
