--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,13 +1,17 @@
-<h1>All users</h1>
+<div class="body-resume grey-bg">
+    <div class="label">
+        Tutti gli utenti
+    </div>
+</div>
 
-<%= will_paginate %>
+<div class="body-transaction">
+  <%= will_paginate %>
+        <% @users.each do |user| %>
+            <a class="li-element">
+                <%= user.name %>
+            </a>
+            <br>
+        <% end %>
+    <%= will_paginate %>
+</div>
 
-<ul class="users">
-  <% @users.each do |user| %>
-    <li>
-      <%= link_to user.name, user %>
-    </li>
-  <% end %>
-</ul>
-
-<%= will_paginate %>
